--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -123,7 +123,7 @@ description: "Description goes here"
 
       <h2>Article headline</h2>
 
-      <figure class="media__obj--above">
+      <figure class="media__obj">
 
         <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
 
@@ -141,7 +141,7 @@ description: "Description goes here"
 
       <h2>Article headline</h2>
 
-      <figure class="media__obj--left">
+      <figure class="media__obj media__obj--left">
 
         <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
 
@@ -159,7 +159,7 @@ description: "Description goes here"
 
       <h2>Article headline</h2>
 
-      <figure class="media__obj--right">
+      <figure class="media__obj media__obj--right">
 
         <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
 
@@ -201,7 +201,7 @@ description: "Description goes here"
 
       <main>
 
-        <figure class="media-_obj--right">
+        <figure class="media__obj media-_obj--right">
 
           <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
 
