--- a/source/css/style.css
+++ b/source/css/style.css
@@ -559,27 +559,27 @@ video {
         .gallery .images li {
           width: 33.33333%; } }
 
-.media:before, .media:after {
-  content: ' ';
-  display: table; }
-.media:after {
-  clear: both; }
-.media--middle {
-  vertical-align: middle; }
-.media__obj--left, .media__obj--right {
-  display: table-cell; }
-  .media__obj--left img, .media__obj--right img {
-    max-width: initial; }
-.media__obj--above {
-  padding-bottom: 1rem; }
-.media__obj--left {
-  padding: 0 1rem 1rem 0; }
-.media__obj--right {
-  padding: 0 0 1rem 1rem; }
-.media__body {
-  display: table-cell;
-  overflow: hidden;
-  vertical-align: middle; }
+.media {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex; }
+  .media--center {
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .media__obj {
+    margin-bottom: 1.5rem; }
+    .media__obj--left {
+      margin-right: 1rem; }
+    .media__obj--right {
+      margin-left: 1rem;
+      -webkit-order: 1;
+          -ms-flex-order: 1;
+              order: 1; }
+  .media__body {
+    -webkit-flex: 1;
+        -ms-flex: 1;
+            flex: 1; }
 
 .nav ul {
   list-style: none;
@@ -804,12 +804,12 @@ video {
       -ms-flex-direction: row;
           flex-direction: row; }
   .align__item--top {
-    -ms-flex-item-align: start;
-            -webkit-align-self: flex-start;
+    -webkit-align-self: flex-start;
+        -ms-flex-item-align: start;
             align-self: flex-start; }
   .align__item--bottom {
-    -ms-flex-item-align: end;
-            -webkit-align-self: flex-end;
+    -webkit-align-self: flex-end;
+        -ms-flex-item-align: end;
             align-self: flex-end; }
 
 .center-block {
@@ -878,4 +878,5 @@ video {
 
   .main {
     width: 100%; } }
+
 /*# sourceMappingURL=style.css.map */
