--- a/source/templates/layouts/main-left-right.html
+++ b/source/templates/layouts/main-left-right.html
@@ -7,9 +7,9 @@
 
   {{> header}}
 
-  <div class="container">
+  <div class="site__container">
 
-    <div class="site__container">
+    <div class="grid__container">
 
       <main class="site__main" role="main">
 
