--- a/source/templates/layouts/main-left.html
+++ b/source/templates/layouts/main-left.html
@@ -9,7 +9,7 @@
 
   <div class="site__container">
 
-    <div class="container">
+    <div class="grid__container">
 
       <main class="site__main" role="main">
 
