--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -3,7 +3,7 @@ title: "Website"
 description: "Description goes here"
 ---
 
-<div class="container">
+<div class="grid__container">
 
   <section id="headings">
 
@@ -640,9 +640,9 @@ description: "Description goes here"
 
         <legend>Legend</legend>
 
-        <div class="row">
+        <div class="grid__row">
 
-          <div class="col--4">
+          <div class="grid__col grid__col--4">
 
             <div class="form__field">
 
@@ -653,7 +653,7 @@ description: "Description goes here"
 
           </div>
 
-          <div class="col--4">
+          <div class="grid__col grid__col--4">
 
             <div class="form__field">
 
@@ -664,7 +664,7 @@ description: "Description goes here"
 
           </div>
 
-          <div class="col--4">
+          <div class="grid__col grid__col--4">
 
             <div class="form__field">
 
@@ -1086,115 +1086,115 @@ description: "Description goes here"
 
     <h3>Grid</h3>
 
-    <div class="row">
+    <div class="grid__row">
 
-      <div class="col--1">col--1</div>
-      <div class="col--1">col--1</div>
-      <div class="col--1">col--1</div>
-      <div class="col--1">col--1</div>
-      <div class="col--1">col--1</div>
-      <div class="col--1">col--1</div>
-      <div class="col--1">col--1</div>
-      <div class="col--1">col--1</div>
-      <div class="col--1">col--1</div>
-      <div class="col--1">col--1</div>
-      <div class="col--1">col--1</div>
-      <div class="col--1">col--1</div>
-
-    </div>
-
-    <div class="row">
-
-      <div class="col--2">col--2</div>
-      <div class="col--2">col--2</div>
-      <div class="col--2">col--2</div>
-      <div class="col--2">col--2</div>
-      <div class="col--2">col--2</div>
-      <div class="col--2">col--2</div>
+      <div class="grid__col grid__col--1">col--1</div>
+      <div class="grid__col grid__col--1">col--1</div>
+      <div class="grid__col grid__col--1">col--1</div>
+      <div class="grid__col grid__col--1">col--1</div>
+      <div class="grid__col grid__col--1">col--1</div>
+      <div class="grid__col grid__col--1">col--1</div>
+      <div class="grid__col grid__col--1">col--1</div>
+      <div class="grid__col grid__col--1">col--1</div>
+      <div class="grid__col grid__col--1">col--1</div>
+      <div class="grid__col grid__col--1">col--1</div>
+      <div class="grid__col grid__col--1">col--1</div>
+      <div class="grid__col grid__col--1">col--1</div>
 
     </div>
 
-    <div class="row">
+    <div class="grid__row">
 
-      <div class="col--3">col--3</div>
-      <div class="col--3">col--3</div>
-      <div class="col--3">col--3</div>
-      <div class="col--3">col--3</div>
-
-    </div>
-
-    <div class="row">
-
-      <div class="col--4">col--4</div>
-      <div class="col--4">col--4</div>
-      <div class="col--4">col--4</div>
+      <div class="grid__col grid__col--2">col--2</div>
+      <div class="grid__col grid__col--2">col--2</div>
+      <div class="grid__col grid__col--2">col--2</div>
+      <div class="grid__col grid__col--2">col--2</div>
+      <div class="grid__col grid__col--2">col--2</div>
+      <div class="grid__col grid__col--2">col--2</div>
 
     </div>
 
-    <div class="row">
+    <div class="grid__row">
 
-      <div class="col--5">col--5</div>
-      <div class="col--5">col--5</div>
-      <div class="col--2">col--2</div>
+      <div class="grid__col grid__col--3">col--3</div>
+      <div class="grid__col grid__col--3">col--3</div>
+      <div class="grid__col grid__col--3">col--3</div>
+      <div class="grid__col grid__col--3">col--3</div>
 
     </div>
 
-    <div class="row">
+    <div class="grid__row">
 
-      <div class="col--6">
+      <div class="grid__col grid__col--4">col--4</div>
+      <div class="grid__col grid__col--4">col--4</div>
+      <div class="grid__col grid__col--4">col--4</div>
+
+    </div>
+
+    <div class="grid__row">
+
+      <div class="grid__col grid__col--5">col--5</div>
+      <div class="grid__col grid__col--5">col--5</div>
+      <div class="grid__col grid__col--2">col--2</div>
+
+    </div>
+
+    <div class="grid__row">
+
+      <div class="grid__col grid__col--6">
 
         col--6
 
-        <div class="row">
+        <div class="grid__row">
 
-          <div class="col--6">col--6</div>
-          <div class="col--6">col--6</div>
+          <div class="grid__col grid__col--6">col--6</div>
+          <div class="grid__col grid__col--6">col--6</div>
 
         </div>
 
       </div>
-      <div class="col--6">col--6</div>
+      <div class="grid__col grid__col--6">col--6</div>
 
     </div>
 
-    <div class="row">
+    <div class="grid__row">
 
-      <div class="col--7">col--7</div>
-      <div class="col--5">col--5</div>
-
-    </div>
-
-    <div class="row">
-
-      <div class="col--8">col--8</div>
-      <div class="col--4">col--4</div>
+      <div class="grid__col grid__col--7">col--7</div>
+      <div class="grid__col grid__col--5">col--5</div>
 
     </div>
 
-    <div class="row">
+    <div class="grid__row">
 
-      <div class="col--9">col--9</div>
-      <div class="col--3">col--3</div>
-
-    </div>
-
-    <div class="row">
-
-      <div class="col--10">col--10</div>
-      <div class="col--2">col--2</div>
+      <div class="grid__col grid__col--8">col--8</div>
+      <div class="grid__col grid__col--4">col--4</div>
 
     </div>
 
-    <div class="row">
+    <div class="grid__row">
 
-      <div class="col--11">col--11</div>
-      <div class="col--1">col--1</div>
+      <div class="grid__col grid__col--9">col--9</div>
+      <div class="grid__col grid__col--3">col--3</div>
 
     </div>
 
-    <div class="row">
+    <div class="grid__row">
 
-      <div class="col--12">col--12</div>
+      <div class="grid__col grid__col--10">col--10</div>
+      <div class="grid__col grid__col--2">col--2</div>
+
+    </div>
+
+    <div class="grid__row">
+
+      <div class="grid__col grid__col--11">col--11</div>
+      <div class="grid__col grid__col--1">col--1</div>
+
+    </div>
+
+    <div class="grid__row">
+
+      <div class="grid__col grid__col--12">col--12</div>
 
     </div>
 
