--- a/source/scss/helpers/_grid.scss
+++ b/source/scss/helpers/_grid.scss
@@ -1,35 +1,32 @@
-.container {
-  @include clearfix();
-  margin: 0 auto;
-  max-width: $grid-container;
-  width: 90%;
-}
+.grid {
 
-.row {
-  @include clearfix();
-  margin: 0 $grid-gutter / -2;
-}
-
-%col {
-  margin: 0 $grid-gutter / 2;
-  min-height: 1px;
-}
-
-@for $i from 1 through $grid-columns {
-
-  .col--#{$i} {
-    @extend %col;
+  &__container {
+    @include clearfix();
+    margin: 0 auto;
+    max-width: $grid-container;
+    width: 90%;
   }
 
-}
+  &__row {
+    @include clearfix();
+    margin: 0 $grid-gutter / -2;
+  }
 
-@media (min-width: $media-small) {
+  &__col {
+    margin: 0 $grid-gutter / 2;
+    min-height: 1px;
 
-  @for $i from 1 through $grid-columns {
+    @media (min-width: $media-small) {
 
-    .col--#{$i} {
-      float: left;
-      width: (100% / $grid-columns * $i - $grid-gutter);
+      @for $i from 1 through $grid-columns {
+
+        &--#{$i} {
+          float: left;
+          width: (100% / $grid-columns * $i - $grid-gutter);
+        }
+
+      }
+
     }
 
   }
@@ -40,12 +37,20 @@
 
   html[dir="rtl"] {
 
-    @media (min-width: $media-small) {
+    .grid {
 
-      @for $i from 1 through $grid-columns {
+      &__col {
 
-        .col--#{$i} {
-          float: right;
+        @media (min-width: $media-small) {
+
+          @for $i from 1 through $grid-columns {
+
+            &--#{$i} {
+              float: right;
+            }
+
+          }
+
         }
 
       }
