--- a/source/templates/pages/404.html
+++ b/source/templates/pages/404.html
@@ -3,7 +3,7 @@ title: "404 | File not found"
 description: "Description goes here"
 ---
 
-<div class="container">
+<div class="grid__container">
 
   <h1>Error 404 - File not found</h1>
 
