--- a/source/templates/partials/header.html
+++ b/source/templates/partials/header.html
@@ -1,6 +1,6 @@
 <header class="site__header" role="banner">
 
-  <div class="container">
+  <div class="grid__container">
 
     <h1>{{ title }}</h1>
 
