--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -9,12 +9,12 @@ description: "Description goes here"
 
     <h3>Headings</h3>
 
-      <h1>Heading 1</h1>
-      <h2>Heading 2</h2>
-      <h3>Heading 3</h3>
-      <h4>Heading 4</h4>
-      <h5>Heading 5</h5>
-      <h6>Heading 6</h6>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
 
   </section>
 
@@ -106,128 +106,118 @@ description: "Description goes here"
 
   <section>
 
-    <picture>
-      <source media="(min-width: 960px)" srcset="http://dummyimage.com/1248x936/808080/fff.png">
-      <source media="(min-width: 640px)" srcset="http://dummyimage.com/960x720/808080/fff.png">
-      <source media="(min-width: 480px)" srcset="http://dummyimage.com/640x480/808080/fff.png">
-      <img src="http://dummyimage.com/460x345/808080/fff.png">
-    </picture>
+    <p>
+      <picture>
+        <source media="(min-width: 960px)" srcset="http://dummyimage.com/1248x936/808080/fff.png">
+        <source media="(min-width: 640px)" srcset="http://dummyimage.com/960x720/808080/fff.png">
+        <source media="(min-width: 480px)" srcset="http://dummyimage.com/640x480/808080/fff.png">
+        <img src="http://dummyimage.com/460x345/808080/fff.png">
+      </picture>
+    </p>
 
   </section>
 
   <section>
 
-    <h3>Article</h3>
+    <h2>Media</h2>
 
-    <article class="article">
+    <h3>Media Left</h3>
 
-      <h2>Article headline</h2>
-
-      <figure class="media__obj">
-
-        <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
-
-        <figcaption>Image Caption</figcaption>
-
-      </figure>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-
-    </article>
-
-    <article class="article">
-
-      <h2>Article headline</h2>
+    <div class="media">
 
       <figure class="media__obj media__obj--left">
 
-        <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
-
-        <figcaption>Image Caption</figcaption>
+        <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
 
       </figure>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+      <div class="media__body">
 
-    </article>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
 
-    <article class="article">
+      </div>
 
-      <h2>Article headline</h2>
+    </div>
+
+    <h3>Media Right</h3>
+
+    <div class="media">
 
       <figure class="media__obj media__obj--right">
 
-        <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
-
-        <figcaption>Image Caption</figcaption>
+        <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
 
       </figure>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+      <div class="media__body">
 
-    </article>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
 
-    <article class="article">
+      </div>
 
-      <h2>Article headline</h2>
+    </div>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+    <h3>Media Center</h3>
 
-      <figure>
+    <div class="media media--center">
 
-        <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
+      <figure class="media__obj media__obj--right">
 
-        <figcaption>Image Caption</figcaption>
+        <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
 
       </figure>
 
-    </article>
-
-    <article class="article">
-
-      <header>
-
-        <h2>Article headline</h2>
-
-      </header>
-
-      <main>
-
-        <figure class="media__obj media-_obj--right">
-
-          <a href="#"><img src="http://dummyimage.com/460x345/808080/fff.png" width="460" height="345"></a>
-
-          <figcaption>Image Caption</figcaption>
-
-        </figure>
+      <div class="media__body">
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
 
-      </main>
+      </div>
 
-      <footer>
+    </div>
 
-        <ul class="tags">
+    <h3>Media Nested</h3>
 
-          <li><a href="#">tag 1</a></li>
-          <li><a href="#">tag 2</a></li>
-          <li><a href="#">tag 3</a></li>
+    <div class="media">
 
-        </ul>
+      <figure class="media__obj media__obj--left">
 
-      </footer>
+        <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
 
-    </article>
+      </figure>
+
+      <div class="media__body">
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+
+        <div class="media">
+
+          <figure class="media__obj media__obj--left">
+
+            <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
+
+          </figure>
+
+          <div class="media__body">
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
 
   </section>
 
