--- a/source/scss/modules/_media.scss
+++ b/source/scss/modules/_media.scss
@@ -8,6 +8,15 @@
   &__obj {
     margin-bottom: 1.5rem;
 
+    &--left,
+    &--right {
+
+      @media (min-width: $media-tiny) {
+        max-width: 50%;
+      }
+
+    }
+
     &--left {
       margin-right: 1rem;
     }
