fix general coding style and indentation

--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -54,7 +54,12 @@ description: "Description goes here"
 
     <address>
 
-      <p><strong>Company Name <br></strong>Address <br>Zip <br>Country <br></p>
+      <p>
+        <strong>Company Name</strong><br>
+        Address <br>
+        Zip <br>
+        Country <br>
+      </p>
 
     </address>
 
@@ -65,11 +70,8 @@ description: "Description goes here"
     <h3>Quotations</h3>
 
     <blockquote>
-
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-
       <cite>Source</cite>
-
     </blockquote>
 
     <q>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, repellat!</q>
@@ -96,10 +98,8 @@ description: "Description goes here"
     <h3>Details</h3>
 
     <details>
-
       <summary>Summary goes here</summary>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, repellat!</p>
-
     </details>
 
   </section>
@@ -126,9 +126,7 @@ description: "Description goes here"
     <div class="media">
 
       <figure class="media__obj media__obj--left">
-
         <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
-
       </figure>
 
       <div class="media__body">
@@ -146,9 +144,7 @@ description: "Description goes here"
     <div class="media">
 
       <figure class="media__obj media__obj--right">
-
         <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
-
       </figure>
 
       <div class="media__body">
@@ -166,9 +162,7 @@ description: "Description goes here"
     <div class="media media--center">
 
       <figure class="media__obj media__obj--right">
-
         <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
-
       </figure>
 
       <div class="media__body">
@@ -186,9 +180,7 @@ description: "Description goes here"
     <div class="media">
 
       <figure class="media__obj media__obj--left">
-
         <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
-
       </figure>
 
       <div class="media__body">
@@ -200,9 +192,7 @@ description: "Description goes here"
         <div class="media">
 
           <figure class="media__obj media__obj--left">
-
             <a href="#"><img src="http://dummyimage.com/48x48/808080/fff.png" width="48" height="48"></a>
-
           </figure>
 
           <div class="media__body">
@@ -223,10 +213,11 @@ description: "Description goes here"
 
   <section id="lists">
 
+    <h2>Lists</h2>
+
     <h3>Unorderd List</h3>
 
     <ul class="list">
-
       <li>List Item 1</li>
       <li>List Item 2
         <ul>
@@ -238,7 +229,6 @@ description: "Description goes here"
       <li>List Item 3</li>
       <li>List Item 4</li>
       <li>List Item 5</li>
-
     </ul>
 
     <h3>Orderd List</h3>
@@ -260,13 +250,10 @@ description: "Description goes here"
     <h3>Definition</h3>
 
     <dl>
-
       <dt>Coffee</dt>
-        <dd>Black hot drink</dd>
-
+      <dd>Black hot drink</dd>
       <dt>Milk</dt>
-        <dd>White cold drink</dd>
-
+      <dd>White cold drink</dd>
     </dl>
 
   </section>
@@ -276,52 +263,32 @@ description: "Description goes here"
     <h3>Table</h3>
 
     <table class="table">
-
       <caption>Table Caption</caption>
-
       <colgroup>
-
         <col span="2" style="background-color: #ccc;">
         <col>
-
       </colgroup>
-
       <thead>
-
         <tr>
-
           <th>Item 1</th>
           <th>Item 2</th>
           <th>Item 3</th>
-
         </tr>
-
       </thead>
-
       <tfoot>
-
         <tr>
-
           <th>Item 1</th>
           <th>Item 2</th>
           <th>Item 3</th>
-
         </tr>
-
       </tfoot>
-
       <tbody>
-
         <tr>
-
           <th>Item 1</th>
           <th>Item 2</th>
           <th>Item 3</th>
-
         </tr>
-
       </tbody>
-
     </table>
 
   </section>
@@ -343,171 +310,87 @@ description: "Description goes here"
       <ul class="images">
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-                <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-              </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
         <li>
-
           <figure>
-
-            <a href="http://dummyimage.com/460x345/808080/fff.png">
-              <img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/>
-            </a>
-
+            <a href="http://dummyimage.com/460x345/808080/fff.png"><img src="http://dummyimage.com/460x345/808080/fff.png" alt="Alt Text" title="Title Text"/></a>
             <figcaption>Figcaption</figcaption>
-
           </figure>
-
         </li>
 
       </ul>
@@ -523,10 +406,8 @@ description: "Description goes here"
     <div class="embed embed--16-9">
 
       <audio controls>
-
         <source src="audio.ogg" type="audio/ogg">
         <source src="../assets/audio/Guts and Bourbon.mp3" type="audio/mpeg">Your browser does not support the audio tag
-
       </audio>
 
     </div>
@@ -544,11 +425,9 @@ description: "Description goes here"
     <div class="embed embed--16-9">
 
       <video width="1920" height="1080" controls>
-
         <source src="../assets/video/fromtheearth.webm" type="video/webm">
         <source src="../assets/video/fromtheearth.mp4" type="video/mp4">
         <source src="video.ogg" type="video/ogg">Your browser does not support the video tag
-
       </video>
 
     </div>
@@ -583,10 +462,8 @@ description: "Description goes here"
     <h3>SWF</h3>
 
     <object type="application/x-shockwave-flash" data="assets/swf/swf.swf" width="100%" height="400">
-
       <param name="movie" value="assets/swf/swf.swf">
       <param name="quality" value="high">
-
     </object>
 
   </section>
@@ -1047,27 +924,21 @@ description: "Description goes here"
     <h3>Breadcrumb</h3>
 
     <nav class="breadcrumb">
-
       <ul>
-
         <li><a href="#">Level 1</a></li>
         <li><a href="#">Level 2</a></li>
         <li><a href="#">Level 3</a></li>
-
       </ul>
-
     </nav>
 
     <h3>Pagination</h3>
 
     <ul class="pagination">
-
       <li class="prev"><a href="#">←</a></li>
       <li><a href="#">1</a></li>
       <li><a href="#">2</a></li>
       <li><a href="#">3</a></li>
       <li class="next"><a href="#">→</a></li>
-
     </ul>
 
   </section>
@@ -1189,6 +1060,5 @@ description: "Description goes here"
     </div>
 
   </section>
-
 
 </div>
